# BALAM-GAMING-MODE

./: .gitignore  BACKEND_RESUMEN_EJECUTIVO.md  CHECKLIST.md  CHECKLIST_COMPLETE.md  DATA_SCHEMA.md  DESIGN.md  FRONTEND_RESUMEN_EJECUTIVO.md  GUIA_PRUEBAS_JUEGOS.md  README.md  SOLUCION_INVOCACION_JUEGOS.md  UI_CONCEPTS.md  UNIFIED_DESIGN_SYSTEM.md  WATCHDOG_SPEC.md  package-lock.json  package.json
.husky/: pre-commit
console-experience/: .eslintignore  .gitignore  .lintstagedrc.json  .prettierignore  .stylelintrc.json  ACCESSIBILITY_VALIDATION_GUIDE.md  CHECKLIST.md  CSS_VARIABLES.md  D3DKMT_RESEARCH.md  DESIGN_SYSTEM.md  FPS_SERVICE_USER_GUIDE.md  GAMEPAD_TESTING_GUIDE.md  MANUAL_TESTING_CHECKLIST.md  OVERLAY_SYSTEM_STATUS.md  PDH_IMPLEMENTATION_COMPLETE.md  PERFORMANCE_BENCHMARK.md  PROGRESS.md  QUALITY.md  README.md  REDESIGN_SUMMARY.md  SPACING_AUDIT_REPORT.md  STANDARDS.md  STYLE_GUIDE.md  TDP_SETUP.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  TESTING_REPORT.md  TEST_COVERAGE_REPORT.md  UNIT_TEST_COVERAGE.md  UX_AUDIT.md  UX_IMPROVEMENTS.md  VISUAL_AUDIT.md  VISUAL_HOMOGENEITY_REPORT.md  VISUAL_REDESIGN.md  build-fps-service.cjs  build-overlay.ps1  build-overlay.sh  build_output_final.txt  download-edgedriver.ps1  e2e-carousel-test-results.txt  (+28 more)
console-experience/e2e/: README.md  app-launch.spec.ts  carousel-scroll-behavior.spec.ts  debug-content.spec.ts  error-handling.spec.ts  game-launch.spec.ts  game-library.spec.ts  navigation.spec.ts  overlays.spec.ts  quick-settings.spec.ts  screenshots.spec.ts  user-journey.spec.ts  wifi-panel-debug.spec.ts
console-experience/fps-service/: ARCHITECTURE.md  Cargo.toml  REAL_FPS_IMPLEMENTATION.md  install-service.ps1  query  update-only.ps1  update-service.bat
console-experience/fps-service/src/: etw_monitor.rs  game_detector.rs  ipc_server.rs  main.rs  service.rs
console-experience/overlay-dll/: Cargo.toml
console-experience/overlay-dll/src/: ipc.rs  lib.rs
console-experience/src-tauri/: .gitignore  2  Cargo.toml  QUALITY.md  build_output.txt  build_output_10.txt  build_output_11.txt  build_output_12.txt  build_output_13.txt  build_output_14.txt  build_output_15.txt  build_output_16.txt  build_output_17.txt  build_output_18.txt  build_output_19.txt  build_output_2.txt  build_output_20.txt  build_output_21.txt  build_output_22.txt  build_output_3.txt  build_output_4.txt  build_output_5.txt  build_output_6.txt  build_output_7.txt  build_output_8.txt  build_output_9.txt  cargo_test_results.txt  check_errors.txt  check_errors_v2.txt  clippy.toml  errors.txt  final_cargo_test_verify.txt  final_final_cargo_test_verify.txt  final_perfect_cargo_test_verify.txt  project_wide_final_verify.txt  rustfmt.toml  tauri.conf.json  validate.ps1  validate.sh
console-experience/src-tauri/.cargo/: config.toml
console-experience/src-tauri/capabilities/: default.json  desktop.json  pip.json
console-experience/src-tauri/config/: exclusions.json
console-experience/src-tauri/migrations/: 001_initial.sql  003_executable_name.sql
console-experience/src-tauri/src/: heartbeat.rs  lib.rs  main.rs
console-experience/src-tauri/src/adapters/: battlenet_scanner.rs  epic_scanner.rs  gamepad_adapter.rs  identity_engine.rs  local_scanner.rs  metadata_adapter.rs  microsoft_store_adapter.rs  mod.rs  process_launcher.rs  process_launcher.rs.backup  registry_scanner.rs  steam_scanner.rs  window_monitor.rs  windows_system_adapter.rs  xbox_scanner.rs
console-experience/src-tauri/src/adapters/bluetooth/: mod.rs  windows_bluetooth_adapter.rs
console-experience/src-tauri/src/adapters/display/: display_config.rs  hdr_manager.rs  mod.rs  windows_display_adapter.rs
console-experience/src-tauri/src/adapters/fps_service/: elevation.rs  fps_client.rs  mod.rs  service_installer.rs
console-experience/src-tauri/src/adapters/game/: mod.rs  windows_game_adapter.rs
console-experience/src-tauri/src/adapters/haptic/: gilrs_haptic_adapter.rs  mod.rs
console-experience/src-tauri/src/adapters/overlay/: detector.rs  dll_overlay.rs  ipc_bridge.rs  mod.rs  strategy.rs  topmost_overlay.rs
console-experience/src-tauri/src/adapters/performance/: mod.rs  ryzenadj_adapter.rs
console-experience/src-tauri/src/adapters/performance_monitoring/: adl_adapter.rs  d3dkmt_adapter.rs  dxgi_adapter.rs  mod.rs  nvml_adapter.rs  pdh_adapter.rs  presentmon_adapter.rs  presentmon_downloader.rs  rtss_adapter.rs  rtss_installer.rs  windows_perf_monitor.rs
console-experience/src-tauri/src/adapters/process_launcher/: constants.rs  error_handler.rs  launch_strategies.rs  mod.rs  pre_flight.rs  uwp.rs  window_manager.rs
console-experience/src-tauri/src/adapters/process_launcher/watchdogs/: mod.rs  pid.rs  steam.rs  xbox.rs
console-experience/src-tauri/src/adapters/wifi/: windows_wifi_adapter.rs
console-experience/src-tauri/src/application/: active_games.rs  commands.rs  mod.rs
console-experience/src-tauri/src/application/commands/: display.rs  fps_service_manager.rs  game.rs  haptic.rs  mod.rs  network.rs  overlay.rs  performance.rs  pip.rs  system.rs
console-experience/src-tauri/src/application/di/: container.rs  mod.rs
console-experience/src-tauri/src/application/services/: mod.rs
console-experience/src-tauri/src/config/: exclusions.rs  mod.rs
console-experience/src-tauri/src/domain/: bluetooth.rs  display.rs  game_process.rs  haptic.rs  mod.rs  performance.rs  wifi.rs
console-experience/src-tauri/src/domain/entities/: game.rs
console-experience/src-tauri/src/domain/errors/: launch_error.rs  mod.rs  scan_error.rs  system_error.rs
console-experience/src-tauri/src/domain/services/: game_deduplication_service.rs  game_discovery_service.rs  mod.rs
console-experience/src-tauri/src/domain/value_objects/: game_source.rs  mod.rs
console-experience/src-tauri/src/ports/: bluetooth_port.rs  display_port.rs  game_management_port.rs  haptic_port.rs  mod.rs  performance_port.rs  scanner_port.rs  system_port.rs  wifi_port.rs
console-experience/src-tauri/src/watchdog/: main.rs
console-experience/src-tauri/tests/: integration_tests.rs  property_tests.rs
(+283 files in other folders)
