[package]
name = "balam-fps-service"
version = "0.1.0"
edition = "2021"
description = "Balam FPS Monitoring Windows Service"

[[bin]]
name = "balam-fps-service"
path = "src/main.rs"

[dependencies]
# Windows APIs - Upgraded to 0.56 for ETW consumer APIs (OpenTraceW, ProcessTrace, CloseTrace)
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_System_Diagnostics",
    "Win32_System_Time",  # Required for EVENT_TRACE_LOGFILEW unions
    "Win32_UI_WindowsAndMessaging",  # Required for GetForegroundWindow
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
parking_lot = "0.12"
once_cell = "1.19"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
