[package]
name = "overlay-dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "overlay_dll"
crate-type = ["cdylib"]  # Compile as Windows DLL

[dependencies]
# Overlay and hooking
hudhook = "0.6"          # DirectX hooking + ImGui integration (0.6 has simpler API)
imgui = "0.11"           # UI rendering (compatible with hudhook 0.6)

# Windows APIs for shared memory IPC
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
] }

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"     # Fast mutex
once_cell = "1.19"       # Lazy statics

[profile.release]
opt-level = 3            # Maximum optimization
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols (smaller DLL)
panic = "abort"          # Smaller binary size
