[package]
name = "overlay-dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "overlay"
crate-type = ["cdylib"]  # Compile as DLL

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
] }

# ImGui for UI rendering
imgui = "0.12"

# IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Synchronization
once_cell = "1.19"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
