[package]
name = "console-experience"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "console-experience" # Explicitly tell Cargo which binary to run

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "console_experience_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
gilrs = "0.10"
sysinfo = "0.30"
walkdir = "2.5.0"
steamlocate = "2.0.1"
winreg = "0.55.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
pelite = "0.10"
path-clean = "1.0"
base64 = "0.22"
libloading = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_WinRT",
    "Management_Deployment",
    "ApplicationModel",
    "ApplicationModel_Core",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Power",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Com_StructuredStorage",
    "Foundation",
    "Foundation_Collections",
    "Gaming_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_Memory",
    "Win32_UI_Input_XboxController",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_UI_Accessibility",
    "Win32_Devices_Bluetooth",
    "Devices_Bluetooth",
    "Devices_Enumeration",
    "Devices_Radios",
] }

# Refactor dependencies (only what we use)
tracing-appender = "0.2"
wmi = "0.18.1"

[dev-dependencies]
proptest = "1.0"
tokio = { version = "1", features = ["test-util"] }

[[bin]]
name = "console-experience"
path = "src/main.rs"

[[bin]]
name = "watchdog"
path = "src/watchdog/main.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

