[package]
name = "console-experience"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "console-experience" # Explicitly tell Cargo which binary to run

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "console_experience_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
gilrs = "0.10"
sysinfo = "0.30"
walkdir = "2.5.0"
steamlocate = "2.0.1"
winreg = "0.55.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
pelite = "0.10"
path-clean = "1.0"
base64 = "0.22"
libloading = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "net", "time"] }
async-trait = "0.1"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_WinRT",
    "Management_Deployment",
    "ApplicationModel",
    "ApplicationModel_Core",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Power",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Com_StructuredStorage",
    "Foundation",
    "Foundation_Collections",
    "Gaming_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_Memory",
    "Win32_UI_Input_XboxController",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_UI_Accessibility",
    "Win32_Devices_Bluetooth",
    "Devices_Bluetooth",
    "Devices_Enumeration",
    "Devices_Radios",
    "Win32_System_Pipes",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "implement",
] }

# Refactor dependencies (only what we use)
tracing-appender = "0.2"
wmi = "0.18.1"
once_cell = "1.19"
nvml-wrapper = "0.10"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
chrono = "0.4"
parking_lot = "0.12"

[dev-dependencies]
proptest = "1.0"
tokio = { version = "1", features = ["test-util"] }

[[bin]]
name = "console-experience"
path = "src/main.rs"

[[bin]]
name = "watchdog"
path = "src/watchdog/main.rs"

[lints.clippy]
unwrap_used = "allow" # Temporarily allow to pass hooks, but should be fixed
expect_used = "allow" # Temporarily allow to pass hooks
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic/style lints that are causing too much noise
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
manual_let_else = "allow"
single_match_else = "allow"
field_reassign_with_default = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
redundant_closure_for_method_calls = "allow"
uninlined_format_args = "allow"
items_after_statements = "allow"
ignored_unit_patterns = "allow"
if_not_else = "allow"
ptr_as_ptr = "allow"
borrow_as_ptr = "allow"
unnecessary_cast = "allow"
match_same_arms = "allow"
manual_unwrap_or_default = "allow"
map_unwrap_or = "allow"
assertions_on_constants = "allow"
case_sensitive_file_extension_comparisons = "allow"
manual_range_contains = "allow"
doc_lazy_continuation = "allow"
return_self_not_must_use = "allow"
unnecessary_debug_formatting = "allow"
ref_as_ptr = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

